Removed advanced protection functionality and mentions from bank app
