# examples/high_assurance/bank_app/src/main/java/com/yubicolabs/bank_app/models/api/AdvancedProtectionStatusResponse.java
@@ -1,78 +1,0 @@
-package com.yubicolabs.bank_app.models.api;
-
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-
-import io.swagger.v3.oas.annotations.media.Schema;
-import lombok.Builder;
-
-import javax.annotation.Generated;
-
-/**
- * AdvancedProtectionStatusResponse
- */
-
-@Builder
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-06-27T11:32:42.412827-05:00[America/Chicago]")
-public class AdvancedProtectionStatusResponse {
-
-  @JsonProperty("enabled")
-  private Boolean enabled;
-
-  public AdvancedProtectionStatusResponse enabled(Boolean enabled) {
-    this.enabled = enabled;
-    return this;
-  }
-
-  /**
-   * Get enabled
-   * 
-   * @return enabled
-   */
-
-  @Schema(name = "enabled", example = "false", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  public Boolean getEnabled() {
-    return enabled;
-  }
-
-  public void setEnabled(Boolean enabled) {
-    this.enabled = enabled;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    AdvancedProtectionStatusResponse advancedProtectionStatusResponse = (AdvancedProtectionStatusResponse) o;
-    return Objects.equals(this.enabled, advancedProtectionStatusResponse.enabled);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(enabled);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class AdvancedProtectionStatusResponse {\n");
-    sb.append("    enabled: ").append(toIndentedString(enabled)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
