# examples/high_assurance/bank_app/src/main/java/com/yubicolabs/bank_app/models/common/Account.java
@@ -15,10 +15,6 @@ public class Account {
 
   @Getter
   @Setter
-  boolean advancedProtection;
-
-  @Getter
-  @Setter
   double balance;
 
   @Getter
