# examples/high_assurance/bank_app/src/main/java/com/yubicolabs/bank_app/models/dbo/mysql/AccountDBO.java
@@ -31,10 +31,6 @@ public class AccountDBO {
 
   @Getter
   @Setter
-  Boolean advancedProtection;
-
-  @Getter
-  @Setter
   double balance;
 
   @Getter
